Added support for actions